--- a/ejercios2/Views/Tienda/Index.cshtml
+++ b/ejercios2/Views/Tienda/Index.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h1 class="text-center" style="font-size: 35px; serif; color: #f1c232; text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6); letter-spacing: 2px;">
+<h1 class="text-center" style="font-size: 35px; color: #f1c232; text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6); letter-spacing: 2px;">
     Adéntrate en el Mundo Mágico de Harry Potter
 </h1>
 <hr style="border-top: 4px dotted #9e6a3b;" />
